--- a/05_4_DWH_factSales.ipynb
+++ b/05_4_DWH_factSales.ipynb
@@ -96,7 +96,7 @@
     "    .format(\"jdbc\") \\\n",
     "    .option(\"url\", cc.create_jdbc()) \\\n",
     "    .option(\"driver\" , cc.get_Property(\"driver\")) \\\n",
-    "    .option(\"dbtable\", \"sales\") \\\n",
+    "    .option(\"dbtable\", \"(select Order_ID, Order_date, SalesRepId, Amount from sales) as subq\") \\\n",
     "    .option(\"user\", cc.get_Property(\"username\")) \\\n",
     "    .option(\"password\", cc.get_Property(\"password\")) \\\n",
     "    .option(\"partitionColumn\", \"Order_ID\") \\\n",
@@ -179,9 +179,7 @@
       "|      8|   691|b65df3d9-20dc-42d...|       1|1588502393|a30a88ea5f72f4df0...|\n",
       "|      9|  1254|b65df3d9-20dc-42d...|       1|1173163372|01aeb05aafe965913...|\n",
       "|     10|  1311|b65df3d9-20dc-42d...|       1| 788682390|b0f5e545ae3941ff0...|\n",
-      "+-------+------+--------------------+--------+----------+--------------------+\n",
-      "only showing top 10 rows\n",
-      "\n"
+      "+-------+------+--------------------+--------+----------+--------------------+\n"
      ]
     }
    ],
@@ -257,8 +255,7 @@
       "|num_affected_rows|num_updated_rows|num_deleted_rows|num_inserted_rows|\n",
       "+-----------------+----------------+----------------+-----------------+\n",
       "|                0|               0|               0|                0|\n",
-      "+-----------------+----------------+----------------+-----------------+\n",
-      "\n"
+      "+-----------------+----------------+----------------+-----------------+\n"
      ]
     }
    ],
@@ -300,8 +297,7 @@
       "|OrderID|dateSK|          salesrepSK|count_mv|revenue_mv|                 md5|\n",
       "+-------+------+--------------------+--------+----------+--------------------+\n",
       "|      1|   650|b65df3d9-20dc-42d...|       1| 851804379|a237b06f2932af7dd...|\n",
-      "+-------+------+--------------------+--------+----------+--------------------+\n",
-      "\n"
+      "+-------+------+--------------------+--------+----------+--------------------+\n"
      ]
     }
    ],
