--- a/05_4_DWH_factSalesDEMO.ipynb
+++ b/05_4_DWH_factSalesDEMO.ipynb
@@ -22,8 +22,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-09-29T12:00:26.895803Z",
-     "end_time": "2023-09-29T12:00:27.486112Z"
+     "end_time": "2024-09-24T09:32:44.795447300Z",
+     "start_time": "2024-09-24T09:32:44.450676800Z"
     }
    }
   },
@@ -32,16 +32,9 @@
    "execution_count": 2,
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<pyspark.sql.session.SparkSession object at 0x000001AA35638910>\n"
-     ]
-    },
-    {
      "data": {
-      "text/plain": "<pyspark.sql.session.SparkSession at 0x1aa35638910>",
-      "text/html": "\n            <div>\n                <p><b>SparkSession - in-memory</b></p>\n                \n        <div>\n            <p><b>SparkContext</b></p>\n\n            <p><a href=\"http://AKDGPORT11191.mshome.net:4040\">Spark UI</a></p>\n\n            <dl>\n              <dt>Version</dt>\n                <dd><code>v3.4.0</code></dd>\n              <dt>Master</dt>\n                <dd><code>local[*]</code></dd>\n              <dt>AppName</dt>\n                <dd><code>factSales</code></dd>\n            </dl>\n        </div>\n        \n            </div>\n        "
+      "text/plain": "<pyspark.sql.session.SparkSession at 0x207934cd510>",
+      "text/html": "\n            <div>\n                <p><b>SparkSession - in-memory</b></p>\n                \n        <div>\n            <p><b>SparkContext</b></p>\n\n            <p><a href=\"http://host.docker.internal:4041\">Spark UI</a></p>\n\n            <dl>\n              <dt>Version</dt>\n                <dd><code>v3.5.2</code></dd>\n              <dt>Master</dt>\n                <dd><code>local[*]</code></dd>\n              <dt>AppName</dt>\n                <dd><code>factSales</code></dd>\n            </dl>\n        </div>\n        \n            </div>\n        "
      },
      "execution_count": 2,
      "metadata": {},
@@ -55,8 +48,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-09-29T12:00:31.310111Z",
-     "end_time": "2023-09-29T12:01:29.752751Z"
+     "end_time": "2024-09-24T09:33:20.332831900Z",
+     "start_time": "2024-09-24T09:32:46.385580100Z"
     }
    }
   },
@@ -95,48 +88,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "+--------+-------------------+----------+----------+\n",
-      "|Order_ID|         Order_date|SalesRepId|    Amount|\n",
+      "|order_id|         order_date|salesrepid|    amount|\n",
       "+--------+-------------------+----------+----------+\n",
-      "|      57|2011-05-17 00:00:00|         2| 778297706|\n",
-      "|      58|2009-11-17 00:00:00|         2|2100696115|\n",
-      "|      59|2011-10-10 00:00:00|         2| 642114638|\n",
-      "|      60|2012-10-07 00:00:00|         2|1440206513|\n",
-      "|      61|2011-08-13 00:00:00|         2|1244596895|\n",
-      "|      62|2011-08-16 00:00:00|         2|1662557955|\n",
-      "|      63|2009-03-04 00:00:00|         2| 844183988|\n",
-      "|      64|2009-08-18 00:00:00|         2| 681975050|\n",
-      "|      65|2010-11-16 00:00:00|         2|1504576144|\n",
-      "|      66|2011-05-27 00:00:00|         2| 622992265|\n",
-      "|      67|2010-08-23 00:00:00|         2|1688444317|\n",
-      "|      68|2011-08-19 00:00:00|         2| 460323116|\n",
-      "|      69|2012-01-03 00:00:00|         2|  30419236|\n",
-      "|      70|2012-11-29 00:00:00|         2|1442844210|\n",
-      "|      71|2012-03-17 00:00:00|         2| 454443619|\n",
-      "|      72|2010-04-12 00:00:00|         2| 938485992|\n",
-      "|      73|2010-08-24 00:00:00|         2| 869179356|\n",
-      "|      74|2011-07-04 00:00:00|         2| 100223959|\n",
-      "|      75|2010-11-10 00:00:00|         2|  43743959|\n",
-      "|      76|2010-06-24 00:00:00|         2| 992175712|\n",
-      "+--------+-------------------+----------+----------+\n",
-      "only showing top 20 rows\n",
-      "\n"
+      "|       1|2010-10-13 00:00:00|         1| 851804379|\n",
+      "|       2|2012-10-01 00:00:00|         1| 683057055|\n",
+      "|       3|2011-07-10 00:00:00|         1|1732115679|\n",
+      "|       4|2010-08-28 00:00:00|         1|1275042249|\n",
+      "|       5|2011-06-17 00:00:00|         1| 694153767|\n",
+      "|       6|2011-03-24 00:00:00|         1|1959464599|\n",
+      "|       7|2010-02-26 00:00:00|         1|1170677605|\n",
+      "|       8|2010-11-23 00:00:00|         1|1588502393|\n",
+      "|       9|2012-06-08 00:00:00|         1|1173163372|\n",
+      "|      10|2012-08-04 00:00:00|         1| 788682390|\n",
+      "|      11|2011-05-30 00:00:00|         1|1951236590|\n",
+      "|      12|2009-11-25 00:00:00|         1| 343432817|\n",
+      "|      13|2012-02-14 00:00:00|         1| 340274106|\n",
+      "|      14|2012-04-15 00:00:00|         1| 958504424|\n",
+      "|      15|2010-03-12 00:00:00|         1|1517930834|\n",
+      "|      16|2011-03-09 00:00:00|         1|1030063917|\n",
+      "|      17|2012-08-04 00:00:00|         1| 792514869|\n",
+      "|      18|2011-05-06 00:00:00|         1|1290134482|\n",
+      "|      19|2010-12-23 00:00:00|         1|1914973740|\n",
+      "|      20|2010-11-08 00:00:00|         1|1710396343|\n",
+      "+--------+-------------------+----------+----------+\n"
      ]
     }
    ],
    "source": [
-    "cc.set_connection(\"default\")\n",
+    "#EXTRACT\n",
+    "cc.set_connectionProfile(\"tutorial_op\")\n",
     "sale_src_df = spark.read \\\n",
     "    .format(\"jdbc\") \\\n",
     "    .option(\"url\", cc.create_jdbc()) \\\n",
-    "    .option(\"driver\" , \"com.microsoft.sqlserver.jdbc.SQLServerDriver\") \\\n",
-    "    .option(\"dbtable\", \"(select Order_ID, Order_date, SalesRepId, Amount from dbo.sales) as subq\") \\\n",
+    "    .option(\"driver\" , cc.get_Property(\"driver\")) \\\n",
+    "    .option(\"dbtable\", \"(select order_id, order_date, salesrepid, amount from sales) as subq\") \\\n",
     "    .option(\"user\", cc.get_Property(\"username\")) \\\n",
     "    .option(\"password\", cc.get_Property(\"password\")) \\\n",
     "    .option(\"partitionColumn\", \"Order_ID\") \\\n",
@@ -150,10 +142,25 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-09-29T12:34:38.991644Z",
-     "end_time": "2023-09-29T12:34:41.991347Z"
+     "end_time": "2024-09-24T09:41:40.814547Z",
+     "start_time": "2024-09-24T09:41:26.895604Z"
     }
    }
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "sale_src_df.createOrReplaceTempView(\"sales_source\")\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-09-24T09:44:16.528173800Z",
+     "start_time": "2024-09-24T09:44:16.423221100Z"
+    }
+   },
+   "execution_count": 7
   },
   {
    "cell_type": "markdown",
@@ -163,24 +170,24 @@
    ],
    "metadata": {
     "collapsed": false
-   },
-   "execution_count": 1
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "outputs": [],
    "source": [
+    "#EXTRACT\n",
     "dim_date = spark.read.format(\"delta\").load(\"spark-warehouse/dimdate\")\n",
-    "dim_salesrep = spark.read.format(\"delta\").load(\"spark-warehouse/dimsalesrep/\")\n",
     "dim_date.createOrReplaceTempView(\"dimDate\")\n",
+    "dim_salesrep = spark.read.format(\"delta\").load(\"spark-warehouse/dimsalesrep/\")\n",
     "dim_salesrep.createOrReplaceTempView(\"dimSalesRep\")"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-09-29T12:34:52.990679Z",
-     "end_time": "2023-09-29T12:34:53.345222Z"
+     "end_time": "2024-09-24T09:43:34.193917400Z",
+     "start_time": "2024-09-24T09:43:30.134133800Z"
     }
    }
   },
@@ -196,54 +203,122 @@
    ],
    "metadata": {
     "collapsed": false
-   },
-   "outputs": []
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+-------+------+--------------------+----------+--------+--------------------+\n",
-      "|OrderId|dateSK|          salesRepSK|revenue_mv|count_mv|                 MD5|\n",
-      "+-------+------+--------------------+----------+--------+--------------------+\n",
-      "|     57|   866|35cc902c-849a-48f...| 778297706|       1|b6c222098edd07a40...|\n",
-      "|     58|   320|35cc902c-849a-48f...|2100696115|       1|1c225c03618bb4183...|\n",
-      "|     59|  1012|35cc902c-849a-48f...| 642114638|       1|5edc506ddb47c56db...|\n",
-      "|     60|  1375|35cc902c-849a-48f...|1440206513|       1|4252cd5c6f95d0e45...|\n",
-      "|     61|   954|35cc902c-849a-48f...|1244596895|       1|16c36c23117ffe401...|\n",
-      "|     62|   957|35cc902c-849a-48f...|1662557955|       1|77b0bb0e64f40f60d...|\n",
-      "|     63|    62|35cc902c-849a-48f...| 844183988|       1|34cd719273646ec61...|\n",
-      "|     64|   229|35cc902c-849a-48f...| 681975050|       1|84045c347f802968f...|\n",
-      "|     65|   684|35cc902c-849a-48f...|1504576144|       1|2a91ca1224a833dd3...|\n",
-      "|     66|   876|35cc902c-849a-48f...| 622992265|       1|82cbcc3f36df0963a...|\n",
-      "+-------+------+--------------------+----------+--------+--------------------+\n",
-      "only showing top 10 rows\n",
-      "\n"
+      "root\n",
+      " |-- date_SK: long (nullable = true)\n",
+      " |-- dateInt: integer (nullable = true)\n",
+      " |-- CalendarDate: date (nullable = true)\n",
+      " |-- CalendarYear: integer (nullable = true)\n",
+      " |-- CalendarMonth: string (nullable = true)\n",
+      " |-- MonthOfYear: integer (nullable = true)\n",
+      " |-- CalendarDay: string (nullable = true)\n",
+      " |-- DayOfWeek: integer (nullable = true)\n",
+      " |-- DayOfWeekStartMonday: integer (nullable = true)\n",
+      " |-- IsWeekDay: string (nullable = true)\n",
+      " |-- DayOfMonth: integer (nullable = true)\n",
+      " |-- IsLastDayOfMonth: string (nullable = true)\n",
+      " |-- DayOfYear: integer (nullable = true)\n",
+      " |-- WeekOfYearIso: integer (nullable = true)\n",
+      " |-- QuarterOfYear: integer (nullable = true)\n"
      ]
     }
    ],
    "source": [
-    "\n",
-    "sale_src_df.createOrReplaceTempView(\"sales_source\")\n",
-    "#TODO: Buil the fact table based on the source table and the dimension tables\n",
-    "salesFactFromSource = spark.sql(\"select src.Order_Id as OrderId , dd.dateSk as dateSK, ds.salesRepSK, src.amount as revenue_mv, 1 as count_mv, md5(concat(src.Order_ID, dd.dateSK, ds.salesRepSK, src.amount)) as MD5  \\\n",
-    "from sales_source as src \\\n",
-    "left outer join dimdate as dd on src.Order_date = cast(dd.CalendarDate as DATE) \\\n",
-    "left outer join dimSalesRep as ds on src.SalesRepId = ds.SalesRepId \\\n",
-    "and ds.scd_start <= src.Order_date \\\n",
-    "and ds.scd_end > src.Order_date\")\n",
-    "salesFactFromSource.show(10)\n",
-    "salesFactFromSource.createOrReplaceTempView(\"factSales_new\")"
+    "dim_date.printSchema()"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-09-29T12:34:56.649697Z",
-     "end_time": "2023-09-29T12:35:04.432193Z"
+     "end_time": "2024-09-24T09:46:53.367588100Z",
+     "start_time": "2024-09-24T09:46:53.278925800Z"
+    }
+   },
+   "execution_count": 8
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "root\n",
+      " |-- order_id: integer (nullable = true)\n",
+      " |-- order_date: timestamp (nullable = true)\n",
+      " |-- salesrepid: integer (nullable = true)\n",
+      " |-- amount: integer (nullable = true)\n",
+      "+--------+-------------------+----------+----------+\n",
+      "|order_id|         order_date|salesrepid|    amount|\n",
+      "+--------+-------------------+----------+----------+\n",
+      "|       1|2010-10-13 00:00:00|         1| 851804379|\n",
+      "|       2|2012-10-01 00:00:00|         1| 683057055|\n",
+      "|       3|2011-07-10 00:00:00|         1|1732115679|\n",
+      "|       4|2010-08-28 00:00:00|         1|1275042249|\n",
+      "|       5|2011-06-17 00:00:00|         1| 694153767|\n",
+      "+--------+-------------------+----------+----------+\n",
+      "only showing top 5 rows\n"
+     ]
+    }
+   ],
+   "source": [
+    "sale_src_df.printSchema()\n",
+    "sale_src_df.show(5)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-09-24T09:47:39.977713200Z",
+     "start_time": "2024-09-24T09:47:37.866147Z"
+    }
+   },
+   "execution_count": 10
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------+-------+--------------------+--------+----------+--------------------+\n",
+      "|Order_ID|date_SK|         salesrep_SK|count_MV|revenue_MV|                 md5|\n",
+      "+--------+-------+--------------------+--------+----------+--------------------+\n",
+      "|       1|    650|d83fc5ef-6592-4c7...|       1| 851804379|a36d84edbd018a3a9...|\n",
+      "|       2|   1369|d83fc5ef-6592-4c7...|       1| 683057055|3cb2b90afa409a2fc...|\n",
+      "|       3|    920|d83fc5ef-6592-4c7...|       1|1732115679|cc505b78f8070b46f...|\n",
+      "|       4|    604|d83fc5ef-6592-4c7...|       1|1275042249|bc03a8b6d45b197be...|\n",
+      "|       5|    897|d83fc5ef-6592-4c7...|       1| 694153767|d89eb2886a3087753...|\n",
+      "+--------+-------+--------------------+--------+----------+--------------------+\n"
+     ]
+    }
+   ],
+   "source": [
+    "#TRANSFORM\n",
+    "\n",
+    "#TODO: Buil the fact table based on the source table and the dimension tables\n",
+    "salesFactFromSource = spark.sql(\"select src.Order_ID as Order_ID, dd.date_SK as date_SK, ds.salesrep_SK as salesrep_SK, 1 as count_MV, src.amount as revenue_MV, md5(concat(src.Order_ID,dd.date_SK,ds.salesrep_SK, 1, src.amount)) as md5  from sales_source as src \\\n",
+    "                                    left outer join dimdate as dd on cast(src.order_date as DATE) = dd.CalendarDate \\\n",
+    "                                    left outer join dimsalesrep as ds on \\\n",
+    "                                        src.SalesRepId = ds.salesRepId \\\n",
+    "                                        and src.Order_Date > ds.scd_start \\\n",
+    "                                        and src.Order_Date <= ds.scd_end\")\n",
+    "                                    \n",
+    "salesFactFromSource.show(5)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-09-24T10:01:56.881363300Z",
+     "start_time": "2024-09-24T10:01:51.383927700Z"
     }
    }
   },
@@ -260,18 +335,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "outputs": [],
    "source": [
-    "\n",
-    "salesFactFromSource.write.format(\"delta\").mode(\"overwrite\").saveAsTable(\"factSales\")\n",
-    "\n"
+    "salesFactFromSource.write.format(\"delta\").mode(\"overwrite\").saveAsTable(\"factSales\")\n"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-09-29T12:30:29.763328Z",
-     "end_time": "2023-09-29T12:30:48.799247Z"
+     "end_time": "2024-09-24T10:03:06.412288400Z",
+     "start_time": "2024-09-24T10:02:49.124353900Z"
     }
    }
   },
@@ -288,21 +361,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+-----------------+----------------+----------------+-----------------+\n",
-      "|num_affected_rows|num_updated_rows|num_deleted_rows|num_inserted_rows|\n",
-      "+-----------------+----------------+----------------+-----------------+\n",
-      "|                2|               1|               0|                1|\n",
-      "+-----------------+----------------+----------------+-----------------+\n",
-      "\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "dt_factSales = DeltaTable.forPath(spark,\".\\spark-warehouse\\\\factsales\")\n",
     "dt_factSales.toDF().createOrReplaceTempView(\"factSales_current\")\n",
@@ -314,11 +374,7 @@
     "result.show()"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "start_time": "2023-09-29T12:35:05.835761Z",
-     "end_time": "2023-09-29T12:35:45.959918Z"
-    }
+    "collapsed": false
    }
   },
   {
@@ -334,11 +390,7 @@
     "\n"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "start_time": "2023-09-20T15:00:55.998584Z",
-     "end_time": "2023-09-20T15:00:59.102741Z"
-    }
+    "collapsed": false
    }
   },
   {
