--- a/05_5_DWH_datawarehouseQueries.ipynb
+++ b/05_5_DWH_datawarehouseQueries.ipynb
@@ -23,8 +23,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-10T09:49:24.436755900Z",
-     "start_time": "2024-09-10T09:49:23.960691600Z"
+     "end_time": "2024-09-24T10:04:43.430565500Z",
+     "start_time": "2024-09-24T10:04:42.834002300Z"
     }
    }
   },
@@ -38,8 +38,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-10T09:49:53.226423200Z",
-     "start_time": "2024-09-10T09:49:24.442750400Z"
+     "end_time": "2024-09-24T10:05:18.656294800Z",
+     "start_time": "2024-09-24T10:04:43.453477Z"
     }
    }
   },
@@ -66,14 +66,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-10T09:50:03.056383700Z",
-     "start_time": "2024-09-10T09:49:53.229957600Z"
+     "end_time": "2024-09-24T10:05:48.219246600Z",
+     "start_time": "2024-09-24T10:05:24.330858400Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "outputs": [
     {
      "name": "stdout",
@@ -83,34 +83,43 @@
       "|DayOfWeek|sum(revenue_mv)|\n",
       "+---------+---------------+\n",
       "|        6|   162008172707|\n",
-      "|        4|   147752834305|\n",
       "|        2|   154130692053|\n",
+      "|        4|   147752834305|\n",
       "|        5|   151068900235|\n",
-      "|        1|   123479476450|\n",
       "|        7|   182712450777|\n",
       "|        3|   155808767203|\n",
+      "|        1|   123479476450|\n",
       "+---------+---------------+\n",
       "+--------+---------------+\n",
       "|  office|sum(revenue_mv)|\n",
       "+--------+---------------+\n",
-      "|  Berlin|  1028779189009|\n",
-      "|New York|    48182104721|\n",
+      "|  Berlin|   767551012914|\n",
+      "|New York|   192978679210|\n",
+      "|Brussels|   116431601606|\n",
       "+--------+---------------+\n"
      ]
     }
    ],
    "source": [
     "# What is the total revenue per weekday?\n",
-    "spark.sql(\"select dd.DayOfWeek, sum(fs.revenue_mv) from factSales fs inner join dimDate dd on dd.dateSK = fs.dateSK group by DayOfWeek\").show()\n",
+    "spark.sql(\"select dd.DayOfWeek, sum(fs.revenue_mv) from factSales fs inner join dimDate dd on dd.date_SK = fs.date_SK group by DayOfWeek\").show()\n",
     "# What is the  revenue for each office?\n",
-    "spark.sql(\"select ds.office, sum(fs.revenue_mv) from factSales fs inner join dimSalesrep ds on ds.salesrepSK = fs.salesrepsk group by Office\").show()"
+    "spark.sql(\"select ds.office, sum(fs.revenue_mv) from factSales fs inner join dimSalesrep ds on ds.salesrep_SK = fs.salesrep_sk group by Office\").show()"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-10T09:50:33.635658500Z",
-     "start_time": "2024-09-10T09:50:03.062490600Z"
+     "end_time": "2024-09-24T10:06:57.921892600Z",
+     "start_time": "2024-09-24T10:06:11.556105100Z"
     }
+   }
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
    }
   }
  ],
