--- a/00_0_CHECK_1_install.ipynb
+++ b/00_0_CHECK_1_install.ipynb
@@ -42,16 +42,105 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ALLUSERSPROFILE: C:\\ProgramData\n",
+      "APPDATA: C:\\Users\\overvelj\\AppData\\Roaming\n",
+      "COMMONPROGRAMFILES: C:\\Program Files\\Common Files\n",
+      "COMMONPROGRAMFILES(X86): C:\\Program Files (x86)\\Common Files\n",
+      "COMMONPROGRAMW6432: C:\\Program Files\\Common Files\n",
+      "COMPUTERNAME: AKDGPORT11191\n",
+      "COMSPEC: C:\\WINDOWS\\system32\\cmd.exe\n",
+      "DRIVERDATA: C:\\Windows\\System32\\Drivers\\DriverData\n",
+      "EFC_12768: 0\n",
+      "FPS_BROWSER_APP_PROFILE_STRING: Internet Explorer\n",
+      "FPS_BROWSER_USER_PROFILE_STRING: Default\n",
+      "HOMEDRIVE: C:\n",
+      "HOMEPATH: \\Users\\overvelj\n",
+      "IDEA_INITIAL_DIRECTORY: C:\\WINDOWS\\system32\n",
+      "JAVA_HOME: C:\\Program Files\\Java\\jdk-11\\\n",
+      "LANG: en_US.UTF-8\n",
+      "LANGUAGE: \n",
+      "LC_ALL: en_US.UTF-8\n",
+      "LOCALAPPDATA: C:\\Users\\overvelj\\AppData\\Local\n",
+      "LOGONSERVER: \\\\CDCDCADM01\n",
+      "NUMBER_OF_PROCESSORS: 8\n",
+      "ONEDRIVE: C:\\Users\\overvelj\\OneDrive - Karel de Grote Hogeschool\n",
+      "ONEDRIVECOMMERCIAL: C:\\Users\\overvelj\\OneDrive - Karel de Grote Hogeschool\n",
+      "OS: Windows_NT\n",
+      "PATH: C:\\DevApps\\311SparkVENV\\Scripts;C:\\Program Files\\Common Files\\Oracle\\Java\\javapath;C:\\Program Files (x86)\\Common Files\\Oracle\\Java\\javapath;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python311;C:\\Program Files\\Common Files\\Oracle\\Java\\javapathREMOVE;C:\\Program Files (x86)\\Common Files\\Oracle\\Java\\javapathREMOVE;C:\\WINDOWS\\system32;C:\\WINDOWS;C:\\WINDOWS\\System32\\Wbem;C:\\WINDOWS\\System32\\WindowsPowerShell\\v1.0\\;C:\\WINDOWS\\System32\\OpenSSH\\;C:\\Program Files (x86)\\Microsoft SQL Server\\150\\DTS\\Binn\\;C:\\Program Files\\dotnet\\;C:\\Program Files\\Graphviz\\bin;C:\\Program Files\\mongosh\\;C:\\Program Files\\MongoDB\\Server\\5.0\\bin;C:\\DevApps\\VENV309_DS2\\\\Scripts;C:\\Program Files\\Microsoft SQL Server\\Client SDK\\ODBC\\170\\Tools\\Binn\\;C:\\DevApps\\gradle-7.6\\bin;C:\\Program Files\\Docker\\Docker\\resources\\bin;C:\\Program Files\\Amazon\\AWSCLIV2\\;C:\\Program Files\\nodejs\\;C:\\Program Files\\Git\\cmd;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python312\\Scripts\\;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python312\\;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Launcher\\;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python310_9\\Scripts\\;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python310_9\\;C:\\Users\\overvelj\\AppData\\Local\\Microsoft\\WindowsApps;C:\\Users\\overvelj\\.dotnet\\tools;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Microsoft VS Code\\bin;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Git\\cmd;C:\\Program Files\\mongosh\\;C:\\Users\\overvelj\\AppData\\Local\\JetBrains\\Toolbox\\scripts;C:\\Users\\overvelj\\AppData\\Roaming\\npm;C:\\Users\\overvelj\\AppData\\Local\\Microsoft\\WindowsApps;;C:\\DevApps\\bigdatatools\\spark-3.5.2-bin-hadoop3\\bin;C:\\DevApps\\bigdatatools\\hadoop-3.4.0-win10-x64\\bin;C:\\Program Files\\Java\\jdk-11\\bin\n",
+      "PATHEXT: .COM;.EXE;.BAT;.CMD;.VBS;.VBE;.JS;.JSE;.WSF;.WSH;.MSC;.PY;.PYW\n",
+      "PROCESSOR_ARCHITECTURE: AMD64\n",
+      "PROCESSOR_IDENTIFIER: Intel64 Family 6 Model 142 Stepping 12, GenuineIntel\n",
+      "PROCESSOR_LEVEL: 6\n",
+      "PROCESSOR_REVISION: 8e0c\n",
+      "PROGRAMDATA: C:\\ProgramData\n",
+      "PROGRAMFILES: C:\\Program Files\n",
+      "PROGRAMFILES(X86): C:\\Program Files (x86)\n",
+      "PROGRAMW6432: C:\\Program Files\n",
+      "PROMPT: (311SparkVENV) $P$G\n",
+      "PSDISTRICT_BOOTIMAGEVERSION: CCM002C6\n",
+      "PSDISTRICT_DEPLOYMENTID: CCM00B0B\n",
+      "PSDISTRICT_INSTALLATIONDATE: 20200814-15:15:29\n",
+      "PSDISTRICT_INSTALLATIONMETHOD: PXE\n",
+      "PSDISTRICT_OFFICEINSTALL: clicktorun2016\n",
+      "PSDISTRICT_SITECODE: CCM\n",
+      "PSDISTRICT_TAAK: domein\n",
+      "PSDISTRICT_TATTOOSCRIPTVERSION: 1.4.3\n",
+      "PSDISTRICT_TSID: CCM00B0B\n",
+      "PSDISTRICT_TSNAME: KdG_W10_1909_Prod_200612.02\n",
+      "PSDISTRICT_UNATTEND: win10ent64-nl-BE-Admin.xml\n",
+      "PSMODULEPATH: C:\\Program Files\\WindowsPowerShell\\Modules;C:\\WINDOWS\\system32\\WindowsPowerShell\\v1.0\\Modules\n",
+      "PUBLIC: C:\\Users\\Public\n",
+      "PYTHONPATH: C:\\DevProjects\\Databricks\n",
+      "SESSIONNAME: Console\n",
+      "SYSTEMDRIVE: C:\n",
+      "SYSTEMROOT: C:\\WINDOWS\n",
+      "TEMP: C:\\Users\\overvelj\\AppData\\Local\\Temp\n",
+      "TMP: C:\\Users\\overvelj\\AppData\\Local\\Temp\n",
+      "UATDATA: C:\\WINDOWS\\CCM\\UATData\\D9F8C395-CAB8-491d-B8AC-179A1FE1BE77\n",
+      "USERDNSDOMAIN: ADMIN.KDG.BE\n",
+      "USERDOMAIN: ADMIN\n",
+      "USERDOMAIN_ROAMINGPROFILE: ADMIN\n",
+      "USERNAME: overvelj\n",
+      "USERPROFILE: C:\\Users\\overvelj\n",
+      "VIRTUAL_ENV: C:\\DevApps\\311SparkVENV\n",
+      "WINDIR: C:\\WINDOWS\n",
+      "ZES_ENABLE_SYSMAN: 1\n",
+      "_OLD_VIRTUAL_PATH: C:\\Program Files\\Common Files\\Oracle\\Java\\javapath;C:\\Program Files (x86)\\Common Files\\Oracle\\Java\\javapath;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python311;C:\\Program Files\\Common Files\\Oracle\\Java\\javapathREMOVE;C:\\Program Files (x86)\\Common Files\\Oracle\\Java\\javapathREMOVE;C:\\WINDOWS\\system32;C:\\WINDOWS;C:\\WINDOWS\\System32\\Wbem;C:\\WINDOWS\\System32\\WindowsPowerShell\\v1.0\\;C:\\WINDOWS\\System32\\OpenSSH\\;C:\\Program Files (x86)\\Microsoft SQL Server\\150\\DTS\\Binn\\;C:\\Program Files\\dotnet\\;C:\\Program Files\\Graphviz\\bin;C:\\Program Files\\mongosh\\;C:\\Program Files\\MongoDB\\Server\\5.0\\bin;C:\\DevApps\\VENV309_DS2\\\\Scripts;C:\\Program Files\\Microsoft SQL Server\\Client SDK\\ODBC\\170\\Tools\\Binn\\;C:\\DevApps\\gradle-7.6\\bin;C:\\Program Files\\Docker\\Docker\\resources\\bin;C:\\Program Files\\Amazon\\AWSCLIV2\\;C:\\Program Files\\nodejs\\;C:\\Program Files\\Git\\cmd;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python312\\Scripts\\;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python312\\;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Launcher\\;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python310_9\\Scripts\\;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python310_9\\;C:\\Users\\overvelj\\AppData\\Local\\Microsoft\\WindowsApps;C:\\Users\\overvelj\\.dotnet\\tools;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Microsoft VS Code\\bin;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Git\\cmd;C:\\Program Files\\mongosh\\;C:\\Users\\overvelj\\AppData\\Local\\JetBrains\\Toolbox\\scripts;C:\\Users\\overvelj\\AppData\\Roaming\\npm;C:\\Users\\overvelj\\AppData\\Local\\Microsoft\\WindowsApps;\n",
+      "_OLD_VIRTUAL_PROMPT: $P$G\n",
+      "JPY_SESSION_NAME: 00_0_CHECK_1_install.ipynb\n",
+      "JPY_INTERRUPT_EVENT: 2028\n",
+      "IPY_INTERRUPT_EVENT: 2028\n",
+      "JPY_PARENT_PID: 2292\n",
+      "PYDEVD_USE_FRAME_EVAL: NO\n",
+      "TERM: xterm-color\n",
+      "CLICOLOR: 1\n",
+      "FORCE_COLOR: 1\n",
+      "CLICOLOR_FORCE: 1\n",
+      "PAGER: cat\n",
+      "GIT_PAGER: cat\n",
+      "MPLBACKEND: module://matplotlib_inline.backend_inline\n",
+      "PYSPARK_PYTHON: python\n",
+      "SPARK_HOME: C:\\DevApps\\bigdatatools\\spark-3.5.2-bin-hadoop3\n",
+      "HADOOP_HOME: C:\\DevApps\\bigdatatools\\hadoop-3.4.0-win10-x64\n",
+      "PYSPARK_HADOOP_VERSION: 3\n"
+     ]
+    }
+   ],
    "source": [
     "import ConnectionConfig as cc\n",
-    "cc.setupEnvironment()"
+    "cc.setupEnvironment()\n",
+    "cc.listEnvironment()"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-17T06:48:31.008364500Z",
-     "start_time": "2024-09-17T06:48:30.209876Z"
+     "end_time": "2024-09-24T10:31:13.999911500Z",
+     "start_time": "2024-09-24T10:31:13.518793300Z"
     }
    }
   },
