--- a/01_1_TASK_1_sparkBasics_SOLUTION.ipynb
+++ b/01_1_TASK_1_sparkBasics_SOLUTION.ipynb
@@ -30,7 +30,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "'http://AKDGPORT11191.admin.kdg.be:4041'"
+      "text/plain": "'http://AKDGPORT11191.admin.kdg.be:4040'"
      },
      "execution_count": 1,
      "metadata": {},
@@ -50,8 +50,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-09T07:56:46.921342800Z",
-     "start_time": "2024-09-09T07:56:31.011331200Z"
+     "end_time": "2024-09-30T17:39:42.138967900Z",
+     "start_time": "2024-09-30T17:38:57.055124400Z"
     }
    }
   },
@@ -78,15 +78,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "None\n",
-      "None\n"
-     ]
+     "data": {
+      "text/plain": "PythonRDD[26] at RDD at PythonRDD.scala:53"
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -97,7 +97,7 @@
     "wordKv = words.map(lambda word: (word, 1))\n",
     "wordCounts = wordKv.reduceByKey(lambda a,b:a +b)\n",
     "#print(wordCounts.first())\n",
-    "#wordCounts.cache()\n",
+    "wordCounts.cache()\n",
     "letterCounts = wordCounts.map(lambda wordTuple: (wordTuple[0][0],wordTuple[1]) )\n",
     "letterCounts = letterCounts.reduceByKey(lambda a,b:a +b)\n",
     "wordCounts.saveAsTextFile(\"./output/words\" + datetime.datetime.now().strftime(\"%m%d%Y%H%M%S\"))\n",
@@ -106,8 +106,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-09T08:08:48.698408500Z",
-     "start_time": "2024-09-09T08:08:38.873199500Z"
+     "end_time": "2024-09-30T17:43:01.305186600Z",
+     "start_time": "2024-09-30T17:42:32.717377400Z"
     }
    }
   },
