Verwijderen niet werkende confluent connectie.

--- a/06_1_EXAMPLE_kafkaConsumer.ipynb
+++ b/06_1_EXAMPLE_kafkaConsumer.ipynb
@@ -44,8 +44,7 @@
    "source": [
     "## Kafka\n",
     "In this cell reading from a Kafka topic is initiated.\n",
-    "The enabled code gets the data from a docker container running Kafka.\n",
-    "_The commented code gets the data from a Confluent Cloud Kafka instance. At this point the code with Confluent is not working. With debugging on it seems that the connection is made with the server but the server disconnects imeadiately after the connection is made. The error message is not very helpful._"
+    "The enabled code gets the data from a docker container running Kafka.\n"
    ],
    "metadata": {
     "collapsed": false
@@ -63,28 +62,7 @@
     "     .option(\"subscribe\", \"demo\")\n",
     "     #.option(\"startingOffsets\", \"earliest\")\n",
     "     .load()\n",
-    " )\n",
-    "# spark.sparkContext.setLogLevel(\"DEBUG\")\n",
-    "# df =  (spark.readStream\n",
-    "#      .format(\"kafka\")\n",
-    "#      .option(\"kafka.bootstrap.servers\", \"pkc-6ojv2.us-west4.gcp.confluent.cloud:9092\")\n",
-    "#      .option(\"security.protocol\", \"SASL_SSL\")\n",
-    "#      .option(\"sasl.jaas.config\", \"org.apache.kafka.common.security.plain.PlainLoginModule required username='PUT API USERNAME HIER password='PUT API KEY PASSWORD HERE';\")\n",
-    "#      .option(\"sasl.mechanism\", \"PLAIN\")\n",
-    "#      #.option(\"kafka.group.id\", \"test\")\n",
-    "#      .option(\"client.dns.lookup\",\"use_all_dns_ips\")\n",
-    "#      .option(\"ssl.endpoint.identification.algorithm\", \"https\")\n",
-    "#      .option(\"session.timeout.ms\", \"45000\")\n",
-    "#      .option(\"acks\", \"all\")\n",
-    "#      .option(\"schema.registry.url\", \"https://psrc-30dr2.us-central1.gcp.confluent.cloud\")\n",
-    "#      .option(\"basci.auth.credentials.source\", \"USER_INFO\")\n",
-    "#      .option(\"basic.auth.user.info\", \"PPZSKZFILMHO5GFA:sn0rEL43vd2Uz8EUDwWNST511BM1UoggZW0m1PeiZg0VuEilOPYIBKFUwIe3jNgd\")\n",
-    "#      .option(\"subscribe\", \"demo\")\n",
-    "#      .option(\"kafka.session.timeout.ms\", \"10000\")\n",
-    "#      .option(\"startingOffsets\", \"earliest\")\n",
-    "#         .load())\n",
-    "\n",
-    "#df.printSchema()"
+    " )"
    ],
    "metadata": {
     "collapsed": false,
