--- a/00_0_CHECK_1_install.ipynb
+++ b/00_0_CHECK_1_install.ipynb
@@ -18,15 +18,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2025-03-13T13:50:13.483813Z",
+     "start_time": "2025-03-13T13:50:13.248607Z"
+    }
    },
-   "outputs": [],
    "source": [
     "from pyspark.sql import SparkSession\n",
     "from delta import configure_spark_with_delta_pip"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 1
   },
   {
    "cell_type": "markdown",
@@ -41,81 +45,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "source": [
+    "import ConnectionConfig as cc\n",
+    "cc.setupEnvironment()\n",
+    "cc.listEnvironment()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2025-03-13T13:50:15.617985Z",
+     "start_time": "2025-03-13T13:50:15.597932Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "ACSETUPSVCPORT: 23210\n",
+      "ACSVCPORT: 17532\n",
       "ALLUSERSPROFILE: C:\\ProgramData\n",
-      "APPDATA: C:\\Users\\overvelj\\AppData\\Roaming\n",
+      "APPDATA: C:\\Users\\NandB\\AppData\\Roaming\n",
+      "ASL.LOG: Destination=file\n",
       "COMMONPROGRAMFILES: C:\\Program Files\\Common Files\n",
       "COMMONPROGRAMFILES(X86): C:\\Program Files (x86)\\Common Files\n",
       "COMMONPROGRAMW6432: C:\\Program Files\\Common Files\n",
-      "COMPUTERNAME: AKDGPORT11191\n",
+      "COMPUTERNAME: LT01-NB\n",
       "COMSPEC: C:\\WINDOWS\\system32\\cmd.exe\n",
       "DRIVERDATA: C:\\Windows\\System32\\Drivers\\DriverData\n",
-      "EFC_12768: 0\n",
+      "EFC_2512: 1\n",
+      "ENABLELOG: INFO\n",
       "FPS_BROWSER_APP_PROFILE_STRING: Internet Explorer\n",
       "FPS_BROWSER_USER_PROFILE_STRING: Default\n",
       "HOMEDRIVE: C:\n",
-      "HOMEPATH: \\Users\\overvelj\n",
-      "IDEA_INITIAL_DIRECTORY: C:\\WINDOWS\\system32\n",
-      "JAVA_HOME: C:\\Program Files\\Java\\jdk-11\\\n",
+      "HOMEPATH: \\Users\\NandB\n",
+      "IPY_INTERRUPT_EVENT: 732\n",
+      "JPY_INTERRUPT_EVENT: 732\n",
+      "JPY_PARENT_PID: 448\n",
+      "JPY_SESSION_NAME: sparkdelta/00_0_CHECK_1_install.ipynb\n",
       "LANG: en_US.UTF-8\n",
       "LANGUAGE: \n",
       "LC_ALL: en_US.UTF-8\n",
-      "LOCALAPPDATA: C:\\Users\\overvelj\\AppData\\Local\n",
-      "LOGONSERVER: \\\\CDCDCADM01\n",
-      "NUMBER_OF_PROCESSORS: 8\n",
-      "ONEDRIVE: C:\\Users\\overvelj\\OneDrive - Karel de Grote Hogeschool\n",
-      "ONEDRIVECOMMERCIAL: C:\\Users\\overvelj\\OneDrive - Karel de Grote Hogeschool\n",
+      "LOCALAPPDATA: C:\\Users\\NandB\\AppData\\Local\n",
+      "LOGONSERVER: \\\\LT01-NB\n",
+      "NUMBER_OF_PROCESSORS: 16\n",
+      "ONEDRIVE: C:\\Users\\NandB\\OneDrive - KdG\n",
       "OS: Windows_NT\n",
-      "PATH: C:\\DevApps\\311SparkVENV\\Scripts;C:\\Program Files\\Common Files\\Oracle\\Java\\javapath;C:\\Program Files (x86)\\Common Files\\Oracle\\Java\\javapath;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python311;C:\\Program Files\\Common Files\\Oracle\\Java\\javapathREMOVE;C:\\Program Files (x86)\\Common Files\\Oracle\\Java\\javapathREMOVE;C:\\WINDOWS\\system32;C:\\WINDOWS;C:\\WINDOWS\\System32\\Wbem;C:\\WINDOWS\\System32\\WindowsPowerShell\\v1.0\\;C:\\WINDOWS\\System32\\OpenSSH\\;C:\\Program Files (x86)\\Microsoft SQL Server\\150\\DTS\\Binn\\;C:\\Program Files\\dotnet\\;C:\\Program Files\\Graphviz\\bin;C:\\Program Files\\mongosh\\;C:\\Program Files\\MongoDB\\Server\\5.0\\bin;C:\\DevApps\\VENV309_DS2\\\\Scripts;C:\\Program Files\\Microsoft SQL Server\\Client SDK\\ODBC\\170\\Tools\\Binn\\;C:\\DevApps\\gradle-7.6\\bin;C:\\Program Files\\Docker\\Docker\\resources\\bin;C:\\Program Files\\Amazon\\AWSCLIV2\\;C:\\Program Files\\nodejs\\;C:\\Program Files\\Git\\cmd;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python312\\Scripts\\;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python312\\;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Launcher\\;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python310_9\\Scripts\\;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python310_9\\;C:\\Users\\overvelj\\AppData\\Local\\Microsoft\\WindowsApps;C:\\Users\\overvelj\\.dotnet\\tools;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Microsoft VS Code\\bin;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Git\\cmd;C:\\Program Files\\mongosh\\;C:\\Users\\overvelj\\AppData\\Local\\JetBrains\\Toolbox\\scripts;C:\\Users\\overvelj\\AppData\\Roaming\\npm;C:\\Users\\overvelj\\AppData\\Local\\Microsoft\\WindowsApps;;C:\\DevApps\\bigdatatools\\spark-3.5.2-bin-hadoop3\\bin;C:\\DevApps\\bigdatatools\\hadoop-3.4.0-win10-x64\\bin;C:\\Program Files\\Java\\jdk-11\\bin\n",
-      "PATHEXT: .COM;.EXE;.BAT;.CMD;.VBS;.VBE;.JS;.JSE;.WSF;.WSH;.MSC;.PY;.PYW\n",
+      "PATH: C:\\ACS202\\Data4\\sparkdelta\\.venv\\Scripts;C:\\Program Files\\Common Files\\Oracle\\Java\\javapath;C:\\Program Files (x86)\\Common Files\\Oracle\\Java\\javapath;C:\\WINDOWS\\system32;C:\\WINDOWS;C:\\WINDOWS\\System32\\Wbem;C:\\WINDOWS\\System32\\WindowsPowerShell\\v1.0\\;C:\\WINDOWS\\System32\\OpenSSH\\;C:\\Program Files\\Microsoft VS Code\\bin;C:\\Program Files\\PuTTY\\;C:\\Program Files\\nodejs\\;C:\\Program Files\\NVIDIA Corporation\\NVIDIA NvDLISR;C:\\Program Files (x86)\\NVIDIA Corporation\\PhysX\\Common;C:\\xampp\\php;C:\\composer;C:\\Program Files\\dotnet\\;C:\\Program Files\\Git\\cmd;C:\\Program Files (x86)\\Gpg4win\\..\\GnuPG\\bin;C:\\Python311\\Scripts\\;C:\\Python311\\;C:\\Python313\\Scripts\\;C:\\Python313\\;C:\\Users\\NandB\\.cargo\\bin;C:\\Python312\\Scripts\\;C:\\Python312\\;C:\\Users\\NandB\\AppData\\Local\\Microsoft\\WindowsApps;C:\\Users\\NandB\\AppData\\Local\\JetBrains\\Toolbox\\scripts;C:\\Users\\NandB\\AppData\\Roaming\\npm;C:\\Users\\NandB\\AppData\\Roaming\\Composer\\vendor\\bin;C:\\Users\\NandB\\.dotnet\\tools;C:\\Python311\\python.exe;;C:\\DevApps\\bigdatatools\\spark-3.5.2-bin-hadoop3\\bin;C:\\DevApps\\bigdatatools\\hadoop-3.4.0-win10-x64\\bin;C:\\Program Files\\Java\\jdk-17\\bin\n",
+      "PATHEXT: .COM;.EXE;.BAT;.CMD;.VBS;.VBE;.JS;.JSE;.WSF;.WSH;.MSC\n",
       "PROCESSOR_ARCHITECTURE: AMD64\n",
-      "PROCESSOR_IDENTIFIER: Intel64 Family 6 Model 142 Stepping 12, GenuineIntel\n",
-      "PROCESSOR_LEVEL: 6\n",
-      "PROCESSOR_REVISION: 8e0c\n",
+      "PROCESSOR_IDENTIFIER: AMD64 Family 25 Model 68 Stepping 1, AuthenticAMD\n",
+      "PROCESSOR_LEVEL: 25\n",
+      "PROCESSOR_REVISION: 4401\n",
       "PROGRAMDATA: C:\\ProgramData\n",
       "PROGRAMFILES: C:\\Program Files\n",
       "PROGRAMFILES(X86): C:\\Program Files (x86)\n",
       "PROGRAMW6432: C:\\Program Files\n",
-      "PROMPT: (311SparkVENV) $P$G\n",
-      "PSDISTRICT_BOOTIMAGEVERSION: CCM002C6\n",
-      "PSDISTRICT_DEPLOYMENTID: CCM00B0B\n",
-      "PSDISTRICT_INSTALLATIONDATE: 20200814-15:15:29\n",
-      "PSDISTRICT_INSTALLATIONMETHOD: PXE\n",
-      "PSDISTRICT_OFFICEINSTALL: clicktorun2016\n",
-      "PSDISTRICT_SITECODE: CCM\n",
-      "PSDISTRICT_TAAK: domein\n",
-      "PSDISTRICT_TATTOOSCRIPTVERSION: 1.4.3\n",
-      "PSDISTRICT_TSID: CCM00B0B\n",
-      "PSDISTRICT_TSNAME: KdG_W10_1909_Prod_200612.02\n",
-      "PSDISTRICT_UNATTEND: win10ent64-nl-BE-Admin.xml\n",
+      "PROMPT: (.venv) $P$G\n",
       "PSMODULEPATH: C:\\Program Files\\WindowsPowerShell\\Modules;C:\\WINDOWS\\system32\\WindowsPowerShell\\v1.0\\Modules\n",
+      "PT8HOME: C:\\Program Files\\Cisco Packet Tracer 8.2.1\n",
       "PUBLIC: C:\\Users\\Public\n",
-      "PYTHONPATH: C:\\DevProjects\\Databricks\n",
+      "PYTHONPATH: C:\\ACS202\\Data4\n",
+      "RLSSVCPORT: 22112\n",
       "SESSIONNAME: Console\n",
       "SYSTEMDRIVE: C:\n",
       "SYSTEMROOT: C:\\WINDOWS\n",
-      "TEMP: C:\\Users\\overvelj\\AppData\\Local\\Temp\n",
-      "TMP: C:\\Users\\overvelj\\AppData\\Local\\Temp\n",
-      "UATDATA: C:\\WINDOWS\\CCM\\UATData\\D9F8C395-CAB8-491d-B8AC-179A1FE1BE77\n",
-      "USERDNSDOMAIN: ADMIN.KDG.BE\n",
-      "USERDOMAIN: ADMIN\n",
-      "USERDOMAIN_ROAMINGPROFILE: ADMIN\n",
-      "USERNAME: overvelj\n",
-      "USERPROFILE: C:\\Users\\overvelj\n",
-      "VIRTUAL_ENV: C:\\DevApps\\311SparkVENV\n",
+      "TEMP: C:\\Users\\NandB\\AppData\\Local\\Temp\n",
+      "TMP: C:\\Users\\NandB\\AppData\\Local\\Temp\n",
+      "USERDOMAIN: LT01-NB\n",
+      "USERDOMAIN_ROAMINGPROFILE: LT01-NB\n",
+      "USERNAME: NandB\n",
+      "USERPROFILE: C:\\Users\\NandB\n",
+      "VIRTUAL_ENV: C:\\ACS202\\Data4\\sparkdelta\\.venv\n",
       "WINDIR: C:\\WINDOWS\n",
-      "ZES_ENABLE_SYSMAN: 1\n",
-      "_OLD_VIRTUAL_PATH: C:\\Program Files\\Common Files\\Oracle\\Java\\javapath;C:\\Program Files (x86)\\Common Files\\Oracle\\Java\\javapath;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python311;C:\\Program Files\\Common Files\\Oracle\\Java\\javapathREMOVE;C:\\Program Files (x86)\\Common Files\\Oracle\\Java\\javapathREMOVE;C:\\WINDOWS\\system32;C:\\WINDOWS;C:\\WINDOWS\\System32\\Wbem;C:\\WINDOWS\\System32\\WindowsPowerShell\\v1.0\\;C:\\WINDOWS\\System32\\OpenSSH\\;C:\\Program Files (x86)\\Microsoft SQL Server\\150\\DTS\\Binn\\;C:\\Program Files\\dotnet\\;C:\\Program Files\\Graphviz\\bin;C:\\Program Files\\mongosh\\;C:\\Program Files\\MongoDB\\Server\\5.0\\bin;C:\\DevApps\\VENV309_DS2\\\\Scripts;C:\\Program Files\\Microsoft SQL Server\\Client SDK\\ODBC\\170\\Tools\\Binn\\;C:\\DevApps\\gradle-7.6\\bin;C:\\Program Files\\Docker\\Docker\\resources\\bin;C:\\Program Files\\Amazon\\AWSCLIV2\\;C:\\Program Files\\nodejs\\;C:\\Program Files\\Git\\cmd;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python312\\Scripts\\;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python312\\;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Launcher\\;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python310_9\\Scripts\\;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python310_9\\;C:\\Users\\overvelj\\AppData\\Local\\Microsoft\\WindowsApps;C:\\Users\\overvelj\\.dotnet\\tools;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Microsoft VS Code\\bin;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Git\\cmd;C:\\Program Files\\mongosh\\;C:\\Users\\overvelj\\AppData\\Local\\JetBrains\\Toolbox\\scripts;C:\\Users\\overvelj\\AppData\\Roaming\\npm;C:\\Users\\overvelj\\AppData\\Local\\Microsoft\\WindowsApps;\n",
+      "_OLD_VIRTUAL_PATH: C:\\Program Files\\Common Files\\Oracle\\Java\\javapath;C:\\Program Files (x86)\\Common Files\\Oracle\\Java\\javapath;C:\\WINDOWS\\system32;C:\\WINDOWS;C:\\WINDOWS\\System32\\Wbem;C:\\WINDOWS\\System32\\WindowsPowerShell\\v1.0\\;C:\\WINDOWS\\System32\\OpenSSH\\;C:\\Program Files\\Microsoft VS Code\\bin;C:\\Program Files\\PuTTY\\;C:\\Program Files\\nodejs\\;C:\\Program Files\\NVIDIA Corporation\\NVIDIA NvDLISR;C:\\Program Files (x86)\\NVIDIA Corporation\\PhysX\\Common;C:\\xampp\\php;C:\\composer;C:\\Program Files\\dotnet\\;C:\\Program Files\\Git\\cmd;C:\\Program Files (x86)\\Gpg4win\\..\\GnuPG\\bin;C:\\Python311\\Scripts\\;C:\\Python311\\;C:\\Python313\\Scripts\\;C:\\Python313\\;C:\\Users\\NandB\\.cargo\\bin;C:\\Python312\\Scripts\\;C:\\Python312\\;C:\\Users\\NandB\\AppData\\Local\\Microsoft\\WindowsApps;C:\\Users\\NandB\\AppData\\Local\\JetBrains\\Toolbox\\scripts;C:\\Users\\NandB\\AppData\\Roaming\\npm;C:\\Users\\NandB\\AppData\\Roaming\\Composer\\vendor\\bin;C:\\Users\\NandB\\.dotnet\\tools;C:\\Python311\\python.exe;\n",
       "_OLD_VIRTUAL_PROMPT: $P$G\n",
-      "JPY_SESSION_NAME: 00_0_CHECK_1_install.ipynb\n",
-      "JPY_INTERRUPT_EVENT: 2028\n",
-      "IPY_INTERRUPT_EVENT: 2028\n",
-      "JPY_PARENT_PID: 2292\n",
       "PYDEVD_USE_FRAME_EVAL: NO\n",
       "TERM: xterm-color\n",
       "CLICOLOR: 1\n",
@@ -127,22 +131,12 @@
       "PYSPARK_PYTHON: python\n",
       "SPARK_HOME: C:\\DevApps\\bigdatatools\\spark-3.5.2-bin-hadoop3\n",
       "HADOOP_HOME: C:\\DevApps\\bigdatatools\\hadoop-3.4.0-win10-x64\n",
-      "PYSPARK_HADOOP_VERSION: 3\n"
+      "PYSPARK_HADOOP_VERSION: 3\n",
+      "JAVA_HOME: C:\\Program Files\\Java\\jdk-17\\\n"
      ]
     }
    ],
-   "source": [
-    "import ConnectionConfig as cc\n",
-    "cc.setupEnvironment()\n",
-    "cc.listEnvironment()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-09-24T10:31:13.999911500Z",
-     "start_time": "2024-09-24T10:31:13.518793300Z"
-    }
-   }
+   "execution_count": 2
   },
   {
    "cell_type": "markdown",
@@ -157,8 +151,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
    "source": [
     "builder = SparkSession.builder \\\n",
     "    .appName(\"InstallCheck\") \\\n",
@@ -172,8 +164,14 @@
     "\n"
    ],
    "metadata": {
-    "collapsed": false
-   }
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2025-03-13T13:50:18.759294Z",
+     "start_time": "2025-03-13T13:50:18.714195Z"
+    }
+   },
+   "outputs": [],
+   "execution_count": 3
   },
   {
    "cell_type": "markdown",
@@ -196,26 +194,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "spark = builder.getOrCreate()"
-   ],
+   "source": "spark = builder.getOrCreate()",
    "metadata": {
-    "collapsed": false
-   }
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2025-03-13T13:50:36.335524Z",
+     "start_time": "2025-03-13T13:50:24.606107Z"
+    }
+   },
+   "outputs": [],
+   "execution_count": 4
   },
   {
    "cell_type": "code",
-   "outputs": [],
    "source": [
     "\n",
     "spark.getActiveSession()"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2025-03-13T13:50:41.637655Z",
+     "start_time": "2025-03-13T13:50:40.374799Z"
+    }
    },
-   "execution_count": null
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pyspark.sql.session.SparkSession at 0x2a861f44e90>"
+      ],
+      "text/html": [
+       "\n",
+       "            <div>\n",
+       "                <p><b>SparkSession - in-memory</b></p>\n",
+       "                \n",
+       "        <div>\n",
+       "            <p><b>SparkContext</b></p>\n",
+       "\n",
+       "            <p><a href=\"http://LT01-NB:4041\">Spark UI</a></p>\n",
+       "\n",
+       "            <dl>\n",
+       "              <dt>Version</dt>\n",
+       "                <dd><code>v3.5.2</code></dd>\n",
+       "              <dt>Master</dt>\n",
+       "                <dd><code>local[*]</code></dd>\n",
+       "              <dt>AppName</dt>\n",
+       "                <dd><code>InstallCheck</code></dd>\n",
+       "            </dl>\n",
+       "        </div>\n",
+       "        \n",
+       "            </div>\n",
+       "        "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 5
   },
   {
    "cell_type": "markdown",
@@ -231,8 +269,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
    "source": [
     "# File location and type\n",
     "file_location = \"./FileStore/tables/shakespeare.txt\"\n",
@@ -245,8 +281,57 @@
     "df.describe()"
    ],
    "metadata": {
-    "collapsed": false
-   }
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2025-03-13T13:50:50.274086Z",
+     "start_time": "2025-03-13T13:50:45.340569Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------+\n",
+      "|               value|\n",
+      "+--------------------+\n",
+      "|This is the 100th...|\n",
+      "|is presented in c...|\n",
+      "|Library of the Fu...|\n",
+      "|often releases Et...|\n",
+      "|                    |\n",
+      "|         Shakespeare|\n",
+      "|                    |\n",
+      "|*This Etext has c...|\n",
+      "|                    |\n",
+      "|<<THIS ELECTRONIC...|\n",
+      "|SHAKESPEARE IS CO...|\n",
+      "|PROVIDED BY PROJE...|\n",
+      "|WITH PERMISSION. ...|\n",
+      "|DISTRIBUTED SO LO...|\n",
+      "|PERSONAL USE ONLY...|\n",
+      "|COMMERCIALLY.  PR...|\n",
+      "|SERVICE THAT CHAR...|\n",
+      "|                    |\n",
+      "|*Project Gutenber...|\n",
+      "|in the presentati...|\n",
+      "+--------------------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "DataFrame[summary: string, value: string]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 6
   },
   {
    "cell_type": "markdown",
@@ -260,8 +345,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
    "source": [
     "df.createOrReplaceTempView('lines')\n",
     "words = spark.sql('select explode(split(value, \" \")) from lines')\n",
@@ -270,8 +353,46 @@
     "lowerwords.show()\n"
    ],
    "metadata": {
-    "collapsed": false
-   }
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2025-03-13T13:50:59.500979Z",
+     "start_time": "2025-03-13T13:50:56.892757Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----+------+\n",
+      "|word|amount|\n",
+      "+----+------+\n",
+      "| the| 27549|\n",
+      "| and| 26037|\n",
+      "|   i| 19540|\n",
+      "|  to| 18700|\n",
+      "|  of| 18010|\n",
+      "|   a| 14383|\n",
+      "|  my| 12455|\n",
+      "|  in| 10671|\n",
+      "| you| 10630|\n",
+      "|that| 10487|\n",
+      "|  is|  9145|\n",
+      "| for|  7982|\n",
+      "|with|  7931|\n",
+      "| not|  7643|\n",
+      "|your|  6871|\n",
+      "| his|  6749|\n",
+      "|  be|  6700|\n",
+      "| but|  5886|\n",
+      "|  he|  5884|\n",
+      "|  as|  5882|\n",
+      "+----+------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "execution_count": 7
   },
   {
    "cell_type": "markdown",
@@ -291,8 +412,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
    "source": [
     "# With this registered as a temp view, it will only be available to this particular notebook. If you'd like other users to be able to query this table, you can also create a table from the DataFrame.\n",
     "# Once saved, this table will persist across cluster restarts as well as allow various users across different notebooks to query this data.\n",
@@ -304,8 +423,14 @@
     "lowerwords.write.format(\"delta\").mode(\"overwrite\").saveAsTable(permanent_table_name)"
    ],
    "metadata": {
-    "collapsed": false
-   }
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2025-03-13T13:51:15.140Z",
+     "start_time": "2025-03-13T13:51:03.541073Z"
+    }
+   },
+   "outputs": [],
+   "execution_count": 8
   },
   {
    "cell_type": "code",
