--- a/01_1_TASK_1_sparkBasics.ipynb
+++ b/01_1_TASK_1_sparkBasics.ipynb
@@ -11,17 +11,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "'http://AKDGPORT11191.mshome.net:4040'"
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "import datetime\n",
     "#Make sure pyspark is installed as a package of your project.\n",
@@ -35,10 +24,23 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-10T09:37:54.106761400Z",
-     "start_time": "2024-09-10T09:37:42.246524800Z"
+     "end_time": "2025-03-13T14:09:30.110659Z",
+     "start_time": "2025-03-13T14:09:20.038042Z"
     }
-   }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'http://LT01-NB:4042'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 1
   },
   {
    "cell_type": "code",
