changed user and ride ELTs

--- a/00_0_CHECK_1_install.ipynb
+++ b/00_0_CHECK_1_install.ipynb
@@ -20,9 +20,8 @@
    "cell_type": "code",
    "metadata": {
     "collapsed": true,
-    "ExecuteTime": {
-     "end_time": "2025-03-13T13:50:13.483813Z",
-     "start_time": "2025-03-13T13:50:13.248607Z"
+    "jupyter": {
+     "is_executing": true
     }
    },
    "source": [
@@ -30,7 +29,7 @@
     "from delta import configure_spark_with_delta_pip"
    ],
    "outputs": [],
-   "execution_count": 1
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -53,7 +52,7 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-03-13T13:50:15.617985Z",
+     "end_time": "2025-05-17T12:31:14.184822100Z",
      "start_time": "2025-03-13T13:50:15.597932Z"
     }
    },
@@ -166,7 +165,7 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-03-13T13:50:18.759294Z",
+     "end_time": "2025-05-17T12:31:14.189912500Z",
      "start_time": "2025-03-13T13:50:18.714195Z"
     }
    },
@@ -198,7 +197,7 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-03-13T13:50:36.335524Z",
+     "end_time": "2025-05-17T12:31:14.190894600Z",
      "start_time": "2025-03-13T13:50:24.606107Z"
     }
    },
@@ -214,7 +213,7 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-03-13T13:50:41.637655Z",
+     "end_time": "2025-05-17T12:31:14.191913700Z",
      "start_time": "2025-03-13T13:50:40.374799Z"
     }
    },
@@ -283,7 +282,7 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-03-13T13:50:50.274086Z",
+     "end_time": "2025-05-17T12:31:14.197899200Z",
      "start_time": "2025-03-13T13:50:45.340569Z"
     }
    },
@@ -355,7 +354,7 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-03-13T13:50:59.500979Z",
+     "end_time": "2025-05-17T12:31:14.199895500Z",
      "start_time": "2025-03-13T13:50:56.892757Z"
     }
    },
@@ -425,7 +424,7 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-03-13T13:51:15.140Z",
+     "end_time": "2025-05-17T12:31:14.199895500Z",
      "start_time": "2025-03-13T13:51:03.541073Z"
     }
    },
@@ -442,6 +441,27 @@
    "metadata": {
     "collapsed": false
    }
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": ""
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": ""
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": ""
   }
  ],
  "metadata": {
